# splash

./: .gitignore  CMakeLists.txt  Makefile  README.md  obi-go-localhost.sh  project.yaml  splash.C
debian/: .gitignore  changelog  control  rules
src/: main.cpp  splash.cpp
